--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,17 +1,32 @@
-article {
+main {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #F5F5F5;
     border-radius: 50px;
     padding: 5%;
     margin-bottom: 20px;
 }
 
-article > div {
+section > div {
     width: 50%;
 }
 
-article > img {
+section > img {
     width: 30%;
+}
+
+section p {
+    margin-bottom: 10px;
+}
+
+section h1 {
+    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 20px;
 }
