--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -3,6 +3,35 @@ body {
     margin: 125px 20px 0 20px;
 }
 
+h2 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+main {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+article, form{
+    border-radius: 30px;
+}
+
+article {
+    background-color: #F5F5F5;
+    margin-bottom: 50px;
+    padding: 0 40px 0 40px;
+    position: relative;
+}
+
+article h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
 header {
     top: 0;
     left: 0;
@@ -36,6 +65,8 @@ header > a {
 
 header > p {
     text-align: center;
+    margin: 0;
+    font-size: 2rem;
 }
 
 label, form > div {
@@ -57,6 +88,15 @@ header > div {
 header > div:last-child {
     float: right;
     padding-right: 20px;
+}
+
+p {
+    margin-bottom: 10px;
+}
+
+span {
+    font-style: italic;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 630px) {
