--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,6 +13,10 @@ section {
     margin-bottom: 20px;
 }
 
+.reverse {
+    flex-direction: row-reverse;
+}
+
 section > div {
     width: 50%;
 }
@@ -25,4 +29,33 @@ section h1 {
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 750px) {
+    section > img {
+        width: 40%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    section {
+        display: block;
+
+    }
+
+    section > div {
+        width: 100%;
+    }
+
+    section > img {
+        width: 50%;
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    section > img {
+        width: 80%;
+    }
 }
