--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,6 +4,11 @@ main {
     margin-right: auto;
 }
 
+main h2 {
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
 section {
     display: flex;
     justify-content: space-between;
@@ -29,6 +34,15 @@ section h1 {
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 20px;
+}
+
+main a {
+    color: black;
+}
+
+main a img {
+    width: 10px;
+    padding-bottom: 5px;
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 750px) {
