--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -8,6 +8,11 @@ a {
     white-space: nowrap;
 }
 
+li {
+    list-style-type: initial;
+    margin-left: 18px;
+}
+
 main p {
     line-height: 1.3rem;
 }
@@ -16,6 +21,11 @@ h2 {
     font-size: 1.2rem;
     font-weight: bold;
     margin-bottom: 15px;
+}
+
+h3 {
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
 main {
