--- a/assets/css/endare.css
+++ b/assets/css/endare.css
@@ -1,4 +1,69 @@
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0 20px;
+  overflow: hidden;
+}
+
+main {
+  width: 100%;
+}
+
 h1 {
   font-size: 25px;
   font-weight: bold;
+}
+
+#chatbot-img1 {
+  width: 1000px;
+}
+
+.opdracht {
+  min-height: 100vh;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.opdracht::-webkit-scrollbar {
+  display: none;
+}
+
+.opdracht > div {
+  padding-top: 125px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.scrollbar {
+  position: fixed;
+  right: 20px;
+  bottom: 40px;
+  z-index: 2;
+}
+
+.scrollbar li {
+  list-style-type: none;
+}
+
+.scrollbar a {
+  color: black;
+  font-size: 25px;
+  text-decoration: none;
+  float: right;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #ccc;
+  border-radius: 20px;
+  width: 100%;
+}
+
+.horizontal-spread {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
 }
