--- a/assets/scss/carousel.scss
+++ b/assets/scss/carousel.scss
@@ -1,3 +1,4 @@
+@use "utilities/colors.scss";
 .carousel {
   position: relative;
   height: fit-content;
@@ -44,9 +45,6 @@
 .carousel .prev {
   left: 20px;
 }
-
 .carousel .next {
   right: 20px;
 }
-
-/*# sourceMappingURL=carousel.css.map */
