--- a/assets/scss/endare.scss
+++ b/assets/scss/endare.scss
@@ -1,3 +1,4 @@
+@use "utilities/colors.scss";
 html {
   scroll-behavior: smooth;
 }
@@ -24,12 +25,13 @@ h1 {
   min-height: 100vh;
   -ms-overflow-style: none;
   scrollbar-width: none;
-}
-.opdracht > div {
-  padding-top: 125px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+
+  > div {
+    padding-top: 125px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .opdracht::-webkit-scrollbar {
@@ -41,20 +43,22 @@ h1 {
   right: 20px;
   bottom: 40px;
   z-index: 2;
-}
-.scrollbar li {
-  list-style-type: none;
-}
-.scrollbar a {
-  color: black;
-  font-size: 25px;
-  text-decoration: none;
-  float: right;
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #ccc;
-  border-radius: 20px;
-  width: 100%;
+
+  li {
+    list-style-type: none;
+  }
+
+  a {
+    color: black;
+    font-size: 25px;
+    text-decoration: none;
+    float: right;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #ccc;
+    border-radius: 20px;
+    width: 100%;
+  }
 }
 
 .horizontal-spread {
@@ -68,5 +72,3 @@ h1 {
 img {
   max-width: 100%;
 }
-
-/*# sourceMappingURL=endare.css.map */
