--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,4 @@
+@use "utilities/colors.scss";
 main {
   width: 80%;
   margin-left: auto;
@@ -50,13 +51,16 @@ main a img {
     width: 40%;
   }
 }
+
 @media only screen and (max-width: 750px) {
   section {
     display: block;
   }
+
   section > div {
     width: 100%;
   }
+
   section > img {
     width: 75%;
     margin-top: 20px;
@@ -64,5 +68,3 @@ main a img {
     transform: translateX(-50%);
   }
 }
-
-/*# sourceMappingURL=home.css.map */
