--- a/assets/scss/opbouw.scss
+++ b/assets/scss/opbouw.scss
@@ -1,3 +1,4 @@
+@use "utilities/colors.scss";
 article img {
   width: 75%;
   max-width: 800px;
@@ -25,6 +26,7 @@ article h2 {
     display: flex;
     justify-content: space-around;
   }
+
   article .imagegroup img {
     align-self: center;
     max-width: 45%;
@@ -32,5 +34,3 @@ article h2 {
     transform: translateX(0);
   }
 }
-
-/*# sourceMappingURL=opbouw.css.map */
