--- a/assets/scss/ucdp.scss
+++ b/assets/scss/ucdp.scss
@@ -1,3 +1,4 @@
+@use "utilities/colors.scss";
 main {
   width: 70%;
 }
@@ -22,7 +23,7 @@ a.download {
 }
 
 #btn-ucdp {
-  background-color: #00cccc;
+  background-color: colors.$main_color;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -32,5 +33,3 @@ embed {
   width: 100%;
   height: 900px;
 }
-
-/*# sourceMappingURL=ucdp.css.map */
