--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -63,7 +63,7 @@ header {
   left: 0;
   width: 100vw;
   position: fixed;
-  background-color: #00cccc;
+  background-color: #00adcc;
   height: 75px;
   font-size: 1.5rem;
   font-weight: bold;
