--- a/assets/css/ucdp.css
+++ b/assets/css/ucdp.css
@@ -22,7 +22,7 @@ a.download {
 }
 
 #btn-ucdp {
-  background-color: #00cccc;
+  background-color: #00adcc;
   color: white;
   border: none;
   padding: 10px 20px;
