--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,52 +1,77 @@
 .carousel {
   position: relative;
-  height: fit-content;
   max-height: 800px;
-  margin-top: 20px;
+  height: 80vh;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
-
+.carousel img {
+  max-width: 100%;
+}
 .carousel .carousel-item {
   position: absolute;
   top: 0;
   left: 0;
+  height: 100%;
   width: 100%;
-  height: fit-content;
+  overflow-x: hidden;
   transition: transform 0.5s ease;
-  overflow: scroll;
+  padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  direction: rtl;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
 }
-
-.carousel-buttons {
+.carousel .carousel-item > div {
+  direction: ltr;
+}
+.carousel .carousel-item::-webkit-scrollbar {
+  width: 20px;
+  margin-left: 50px;
+}
+.carousel .carousel-item::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+.carousel .carousel-item::-webkit-scrollbar-thumb {
+  background: #00cccc;
+  border-radius: 10px;
+}
+.carousel .carousel-item::-webkit-scrollbar-thumb:hover {
+  background: #00bbbb;
+  border: 5px solid transparent;
+}
+.carousel .carousel-buttons {
   position: absolute;
-  bottom: 0;
+  top: 0;
   margin-left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
 }
-
-.carousel-buttons p {
+.carousel .carousel-buttons p {
   margin: 0 10px;
   font-size: 30px;
   font-weight: bold;
 }
-
-.carousel button {
+.carousel .carousel-buttons button {
   background-color: transparent;
   border: none;
   cursor: pointer;
   z-index: 1;
+  width: 40px;
+  height: 40px;
+  padding: 0;
 }
-
-.carousel button img {
-  width: 40px !important;
+.carousel .carousel-buttons button.prev {
+  margin-right: 10px;
 }
-
-.carousel .prev {
-  left: 20px;
-}
-
-.carousel .next {
-  right: 20px;
+.carousel .carousel-buttons button.next {
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=carousel.css.map */
