--- a/assets/css/sidemenu.css
+++ b/assets/css/sidemenu.css
@@ -2,7 +2,7 @@
 .nav__item {
   width: 75px;
   height: 75px;
-  background-color: #009ccc;
+  background-color: #00adcc;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,7 +11,7 @@
 }
 .hamburger-menu__container:hover,
 .nav__item:hover {
-  background-color: #027699;
+  background-color: #00cccc;
 }
 
 .hamburger-menu {
@@ -20,7 +20,7 @@
 }
 .hamburger-menu__line {
   background-color: white;
-  height: 3px;
+  height: 5px;
   border-radius: 2px;
 }
 .hamburger-menu__line:first-child, .hamburger-menu__line:last-child {
@@ -154,11 +154,12 @@
 .nav__item img {
   max-width: 45px;
   max-height: 56.25px;
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
 }
 
 .nav__item-text {
   color: white;
-  background-color: #027699;
+  background-color: #00cccc;
   position: absolute;
   font-weight: 600;
   left: 90%;
@@ -166,7 +167,7 @@
   font-size: 1.25rem;
   white-space: nowrap;
   transition: all 0.3s ease-in-out;
-  padding: 8px;
+  padding: 16px;
 }
 
 /*# sourceMappingURL=sidemenu.css.map */
