--- a/assets/scss/carousel.scss
+++ b/assets/scss/carousel.scss
@@ -1,50 +1,89 @@
 @use "utilities/colors.scss";
 .carousel {
   position: relative;
-  height: fit-content;
   max-height: 800px;
-  margin-top: 20px;
-}
+  height: 80vh;
 
-.carousel .carousel-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: fit-content;
-  transition: transform 0.5s ease;
-  overflow: scroll;
-}
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 
-.carousel-buttons {
-  position: absolute;
-  bottom: 0;
-  margin-left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-}
+  img {
+    max-width: 100%;
+  }
 
-.carousel-buttons p {
-  margin: 0 10px;
-  font-size: 30px;
-  font-weight: bold;
-}
+  .carousel-item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    transition: transform 0.5s ease;
+    padding: 0 24px;
+    display: flex;
+    flex-direction: column;
+    direction: rtl;
 
-.carousel button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  z-index: 1;
-}
+    > div {
+      direction: ltr;
+    }
 
-.carousel button img {
-  width: 40px !important;
-}
+    /* width */
+    &::-webkit-scrollbar {
+      width: 20px;
+      margin-left: 50px;
+    }
 
-.carousel .prev {
-  left: 20px;
-}
-.carousel .next {
-  right: 20px;
+    /* Track */
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey;
+      border-radius: 10px;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: colors.$secondary_color;
+      border-radius: 10px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: colors.$secondary_hover_color;
+      border: 5px solid transparent;
+    }
+  }
+
+  .carousel-buttons {
+    position: absolute;
+    top: 0;
+    margin-left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+
+    p {
+      margin: 0 10px;
+      font-size: 30px;
+      font-weight: bold;
+    }
+
+    button {
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      z-index: 1;
+      width: 40px;
+      height: 40px;
+      padding: 0;
+
+      &.prev {
+        margin-right: 10px;
+      }
+
+      &.next {
+        margin-left: 10px;
+      }
+    }
+  }
 }
