--- a/assets/scss/utilities/colors.scss
+++ b/assets/scss/utilities/colors.scss
@@ -1,3 +1,9 @@
-$main_color: #00cccc;
-$secondary_color: #009ccc;
-$secondary_hover_color: #027699;
+$svg_filter_white: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
+$svg_filter_black: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
+
+$main_color: #00adcc;
+$secondary_color: #00cccc;
+$secondary_hover_color: #00bbbb;
+
+$header_text_color: white;
+$header_svg_color: $svg_filter_white;
