--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,4 +1,6 @@
 body {
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out;
   font-family: Helvetica, Arial, sans-serif;
   margin: 125px 20px 0 20px;
   background-color: #f5f5f5;
