--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -2,6 +2,8 @@
 @use "utilities/variables.scss";
 
 body {
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out;
   font-family: Helvetica, Arial, sans-serif;
   margin: 125px 20px 0 20px;
   background-color: #f5f5f5;
