--- a/assets/css/endare.css
+++ b/assets/css/endare.css
@@ -11,11 +11,6 @@ main {
   width: 100%;
 }
 
-h1 {
-  font-size: 25px;
-  font-weight: bold;
-}
-
 #chatbot-img1 {
   width: 1000px;
 }
@@ -29,7 +24,14 @@ h1 {
   padding-top: 96px;
 }
 .opdracht > div > h1 {
-  margin-bottom: 24px;
+  font-size: 25px;
+  font-weight: bold;
+}
+.opdracht > div > h3 {
+  margin-top: 8px;
+}
+.opdracht .carousel {
+  margin-top: 24px;
 }
 
 .scrollbar {
