--- a/assets/css/sidemenu.css
+++ b/assets/css/sidemenu.css
@@ -168,6 +168,7 @@
   white-space: nowrap;
   transition: all 0.3s ease-in-out;
   padding: 16px;
+  pointer-events: none;
 }
 
 /*# sourceMappingURL=sidemenu.css.map */
