--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   direction: rtl;
+  transition: opacity 0.4s ease-in-out;
   /* width */
   /* Track */
   /* Handle */
