--- a/assets/scss/carousel.scss
+++ b/assets/scss/carousel.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     direction: rtl;
+    transition: opacity 0.4s ease-in-out;
 
     > div {
       direction: ltr;
