--- a/assets/css/opbouw.css
+++ b/assets/css/opbouw.css
@@ -1,23 +1,20 @@
+article {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+article h2 {
+  margin-bottom: 2px;
+}
 article img {
   width: 75%;
   max-width: 800px;
   margin-left: 50%;
   transform: translateX(-50%);
 }
-
-.imagegroup,
+article .imagegroup,
 article img {
   margin-top: 10px;
   margin-bottom: 20px;
-}
-
-article {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-article h2 {
-  margin-bottom: 2px;
 }
 
 @media only screen and (min-width: 1000px) {
