--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,11 +3,20 @@ main {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-}
 
-main h2 {
-  margin-top: 20px;
-  margin-bottom: 5px;
+  h2 {
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+
+  a {
+    color: black;
+
+    img {
+      width: 10px;
+      padding-bottom: 5px;
+    }
+  }
 }
 
 section {
@@ -17,33 +26,24 @@ section {
   border-radius: 50px;
   padding: 5%;
   margin-bottom: 20px;
+
+  > div {
+    width: 50%;
+  }
+
+  > img {
+    width: 30%;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
 }
 
 .reverse {
   flex-direction: row-reverse;
-}
-
-section > div {
-  width: 50%;
-}
-
-section > img {
-  width: 30%;
-}
-
-section h1 {
-  font-weight: bold;
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-
-main a {
-  color: black;
-}
-
-main a img {
-  width: 10px;
-  padding-bottom: 5px;
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 750px) {
@@ -55,16 +55,16 @@ main a img {
 @media only screen and (max-width: 750px) {
   section {
     display: block;
-  }
 
-  section > div {
-    width: 100%;
-  }
+    > div {
+      width: 100%;
+    }
 
-  section > img {
-    width: 75%;
-    margin-top: 20px;
-    margin-left: 50%;
-    transform: translateX(-50%);
+    > img {
+      width: 75%;
+      margin-top: 20px;
+      margin-left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
