--- a/assets/scss/ucdp.scss
+++ b/assets/scss/ucdp.scss
@@ -1,11 +1,14 @@
 @use "utilities/colors.scss";
+@use "utilities/variables.scss";
+@use "_general";
+@use "_sidemenu.scss";
+
 main {
   width: 70%;
 }
 
 article {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  margin-bottom: variables.$header_space;
 }
 
 object {
@@ -32,4 +35,6 @@ a.download {
 embed {
   width: 100%;
   height: 900px;
+  margin-top: 16px;
+  border-bottom: 4px solid black;
 }
