--- a/assets/css/endare.css
+++ b/assets/css/endare.css
@@ -1,3 +1,304 @@
+body {
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out;
+  font-family: Helvetica, Arial, sans-serif;
+  margin: 106px 20px 0 20px;
+  background-color: #f5f5f5;
+}
+
+a {
+  white-space: nowrap;
+}
+
+code {
+  background-color: #ccc;
+  padding: 2px 5px;
+  border-radius: 5px;
+}
+
+li {
+  list-style-type: initial;
+  margin-left: 18px;
+}
+
+h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+h3 {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+main {
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+main p {
+  line-height: 1.3rem;
+  margin-bottom: 0;
+}
+
+article,
+form {
+  border-radius: 30px;
+}
+
+header {
+  top: 0;
+  left: 0;
+  width: 100vw;
+  position: fixed;
+  background-color: #00adcc;
+  height: 74px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  text-transform: uppercase;
+  z-index: 2;
+}
+header > * {
+  width: 33.3%;
+}
+header > p {
+  text-align: center;
+  margin: 0;
+  font-size: 1.5rem;
+}
+header > p a {
+  color: white;
+  text-decoration: none;
+  text-transform: none;
+  float: right;
+  padding-right: 30px;
+}
+header a {
+  margin-right: 30px;
+}
+header > div {
+  display: inline-block;
+}
+header > div:last-child {
+  float: right;
+  padding-right: 20px;
+}
+
+label,
+form > div {
+  display: inline-block;
+}
+
+input {
+  margin-right: 10px;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+span {
+  font-style: italic;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 700px) {
+  header > a,
+  header > p {
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 450px) {
+  header {
+    justify-content: space-between;
+  }
+  header > div {
+    width: 10%;
+  }
+  header > a {
+    margin-right: 0;
+    padding: 0;
+    width: 50%;
+  }
+}
+.hamburger-menu__container,
+.nav__item {
+  width: 74px;
+  height: 74px;
+  background-color: #00adcc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease-in;
+  cursor: pointer;
+}
+.hamburger-menu__container:hover,
+.nav__item:hover {
+  background-color: #00cccc;
+}
+
+.hamburger-menu {
+  width: 50%;
+  position: relative;
+}
+.hamburger-menu__line {
+  background-color: white;
+  height: 5px;
+  border-radius: 2px;
+}
+.hamburger-menu__line:first-child, .hamburger-menu__line:last-child {
+  width: 100%;
+  position: absolute;
+  transition: all 0.1s ease-out;
+}
+
+.hamburger-menu__line:not(:first-child):not(:last-child) {
+  animation-name: hamburger;
+  animation-duration: 0.15s;
+  animation-delay: 0.15s;
+  transform: scaleX(0);
+}
+.hamburger-menu__line, .hamburger-menu__line:first-child, .hamburger-menu__line:last-child {
+  animation-fill-mode: forwards;
+}
+.hamburger-menu__line:first-child, .hamburger-menu__line:last-child {
+  transform-origin: 50%;
+  animation-duration: 0.3s;
+}
+.hamburger-menu__line:first-child {
+  top: 0;
+  animation-name: hamburgerFirst;
+  transform: rotate(45deg);
+}
+.hamburger-menu__line:last-child {
+  top: 0;
+  animation-name: hamburgerLast;
+  transform: rotate(-45deg);
+}
+
+.hamburger-menu--open .hamburger-menu__line:not(:first-child):not(:last-child) {
+  animation-name: hamburgerOpen;
+  transform: scaleX(100%);
+}
+.hamburger-menu--open .hamburger-menu__line:first-child {
+  top: -10px;
+  transform: rotate(0);
+  animation-name: hamburgerFirstOpen;
+}
+.hamburger-menu--open .hamburger-menu__line:last-child {
+  top: 10px;
+  transform: rotate(0);
+  animation-name: hamburgerLastOpen;
+}
+
+@keyframes hamburger {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes hamburgerOpen {
+  0% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scaleX(0);
+  }
+}
+@keyframes hamburgerFirst {
+  0% {
+    top: 0;
+    transform: rotate(45deg);
+  }
+  50% {
+    top: 0;
+    transform: rotate(0);
+  }
+  100% {
+    top: 10px;
+    transform: rotate(0);
+  }
+}
+@keyframes hamburgerLast {
+  0% {
+    top: 0;
+    transform: rotate(-45deg);
+  }
+  50% {
+    top: 0;
+    transform: rotate(0);
+  }
+  100% {
+    top: -10px;
+    transform: rotate(0);
+  }
+}
+@keyframes hamburgerFirstOpen {
+  0% {
+    top: 10px;
+    transform: rotate(0);
+  }
+  50% {
+    top: 0;
+    transform: rotate(0);
+  }
+  100% {
+    top: 0;
+    transform: rotate(45deg);
+  }
+}
+@keyframes hamburgerLastOpen {
+  0% {
+    top: -12px;
+    transform: rotate(0);
+  }
+  50% {
+    top: 0;
+    transform: rotate(0);
+  }
+  100% {
+    top: 0;
+    transform: rotate(-45deg);
+  }
+}
+.nav__item {
+  top: 0;
+  position: absolute;
+  z-index: -1;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+}
+.nav__item:hover .nav__item-text {
+  left: 120%;
+  opacity: 1;
+}
+.nav__item img {
+  max-width: 44.4px;
+  max-height: 55.5px;
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
+}
+
+.nav__item-text {
+  color: white;
+  background-color: #00cccc;
+  position: absolute;
+  font-weight: 600;
+  left: 90%;
+  opacity: 0;
+  font-size: 1.25rem;
+  white-space: nowrap;
+  transition: all 0.3s ease-in-out;
+  padding: 16px;
+  pointer-events: none;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -28,6 +329,9 @@ main {
   font-weight: bold;
 }
 .opdracht > div > h3 {
+  margin-top: 8px;
+}
+.opdracht > div ul {
   margin-top: 8px;
 }
 .opdracht .carousel {
