--- a/assets/scss/carousel.scss
+++ b/assets/scss/carousel.scss
@@ -1,8 +1,7 @@
 @use "utilities/colors.scss";
 .carousel {
   position: relative;
-  max-height: 800px;
-  height: 75vh;
+  min-height: inherit;
 
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
@@ -25,6 +24,15 @@
     flex-direction: column;
     direction: rtl;
     transition: opacity 0.4s ease-in-out;
+
+    h2 {
+      margin-bottom: 8px;
+    }
+
+    h3 {
+      margin-top: 0;
+      font-size: 1rem;
+    }
 
     > div {
       direction: ltr;
@@ -59,7 +67,7 @@
     position: absolute;
     top: 0;
     margin-left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -120%);
     display: flex;
     align-items: center;
 
