--- a/assets/scss/endare.scss
+++ b/assets/scss/endare.scss
@@ -1,4 +1,5 @@
 @use "utilities/colors.scss";
+@use "utilities/variables.scss";
 @use "_general";
 @use "_sidemenu.scss";
 
@@ -20,13 +21,14 @@ main {
 }
 
 .opdracht {
-  min-height: 100vh;
   width: 90%;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
 
   > div {
-    padding-top: 96px;
-
+    min-height: calc(100vh - variables.$top_margin * 2);
+    max-height: calc(100vh - variables.$top_margin * 2);
+    padding-top: variables.$top_margin;
+    padding-bottom: variables.$top_margin;
     > h1 {
       font-size: 25px;
       font-weight: bold;
@@ -37,10 +39,6 @@ main {
     ul {
       margin-top: 8px;
     }
-  }
-
-  .carousel {
-    margin-top: 24px;
   }
 }
 
